Change web site

--- a/index.html
+++ b/index.html
@@ -1,143 +1,1 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Việt Vest</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/content_home.css" />
-</head>
-
-<body>
-	<div id="header">
-    	<div>
-        	<a id="header_logo" href="index.html"></a>
-            <ul id="header_menu">
-            	<li class="selected" id="header_first_menu"><a href="index.html">Trang chủ</a></li>
-                <li><a href="product.html">Sản phẩm</a></li>
-                <li><a href="services.html">Dịch vụ</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Liên hệ</a></li>
-                <li><a href="about.html">Giới thiệu</a></li>
-            </ul>
-        </div>
-    </div>
-    
-    <div id="content">
-        <div id="content_shop">
-            <div id="content_shop_1">
-                <div id="description">
-                	<ul>
-                    	<li id="home_first">
-                        	<h2>ÁO VEST NAM <br />LỊCH LÃM, MẠNH MẼ</h2>
-                        </li>
-                        <li id="home_second">
-                        	<p>Kiểu dáng đơn giản, hợp thời trang, tạo phong cách lịch lãm, sang trọng cho nam giới.</p>
-                        </li>
-                        <li id="home_third">
-                        	<a href="product.html">Sản phẩm</a>
-                        </li>
-                    </ul>
-                </div>
-                <div id="image_des">
-                	<a href="product.html"><img src="images/tuxedo1.jpg" alt="Image" /></a>
-                </div>
-                <div id="list_des">
-                	<h3>Handcrafted and made from 100% Wool</h3>
-                	<ul>
-                    	<li>
-							<a href="product.html"><img src="images/tuxedo2.jpg" alt="Image"></a>
-                            <p>Kiểu dáng đơn giản</p>
-                        </li>
-                        <li>
-							<a href="product.html"><img src="images/tuxedo3.jpg" alt="Image"></a>
-                            <p>Phong cách lịch lãm</p>
-						</li>
-                    </ul>
-                </div>
-            </div>
-		</div>
-        <div id="content_services">
-        	<div id="content_services_1">
-            	<div id="about_services">
-					<h1>Cửa hàng cung cấp các dịch vụ </h1>
-                    <ul>
-                    	<li>
-                        	<a href="details.html"><img src="images/handmade1.jpg" /></a>
-                            <a href="details.html"><h2 style="text-align:center;">Làm thủ công</h2></a>
-							<p class="test">
-								Mọi sản phẩm được làm tỉ mỉ bằng tay.
-							</p>
-                        </li>
-                        <li>
-                        	<a href="details.html"><img src="images/design1.jpg" /></a>
-                             <a href="details.html"><h2 style="text-align:center;">Thiết kế</h2></a>
-							<p>
-								Bạn có thể tự điều chỉnh thiết kế.
-							</p>
-                        </li>
-                        <li>
-                        	<a href="details.html"><img src="images/perfectfit3.jpg" /></a>
-                             <a href="details.html"><h2 style="text-align:center;">Dạy cắt may</h2></a>
-							<p>
-								Mọi sản phẩm vừa vặn với dáng người.
-							</p>
-                        </li>
-                    </ul>
-                </div>
-                <div id="home_sidebar">
-            		<h1>Blog</h1>
-					<ul>
-                    	<li>
-                        	<span>Duy Khoa - 26/08/2015</span>
-                            <h3>Tiêu đề</h3>
-                            <p>Đây là 1 trang Blog. Đây là 1 trang Blog. Đây là 1 trang Blog</p>
-                            <a href="blogct.html">Đọc thêm</a>
-                        </li>
-                        <li>
-                        	<span>Lan Anh - 26/08/2015</span>
-                            <h3>Tiêu đề</h3>
-                            <p>Đây là 1 trang Blog. Đây là 1 trang Blog. Đây là 1 trang Blog</p>
-                            <a href="blogct.html">Đọc thêm</a>
-                        </li>
-                        <li>
-                        	<span>Lan Anh - 26/08/2015</span>
-                            <h3>Tiêu đề</h3>
-                            <p>Đây là 1 trang Blog. Đây là 1 trang Blog. Đây là 1 trang Blog</p>
-                            <a href="blogct.html">Đọc thêm</a>
-                        </li>
-                    </ul>
-           		 </div>
-            </div>
-        </div>
-    </div>
-    
-    <div id="footer">
-    	<div>
-        	<div id="footer_menu">
-                <ul>
-                    <li class="selected" id="footer_first_menu"><a href="index.html">Trang chủ</a></li>
-                    <li><a href="product.html">Sản phẩm</a></li>
-                    <li><a href="services.html">Dịch vụ</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contact.html">Liên hệ</a></li>
-                    <li><a href="about.html">Giới thiệu</a></li>
-                </ul>		
-            </div>
-            <div id="footer_logo">
-            	<a href="index.html"><img src="images/logo.png" alt="Logo"/></a>
-            </div>
-            <div id="footer_about">
-            	<p> Cửa hàng may <a href="#">Việt Vest</a>.
-                	<br /> Địa chỉ: Tầng 7 - 32 phố Huế - Hà Nội.
-                    <br /> Email liên hệ: contact@vietvest.com 
-                    <br /> Điện thoại: (+84-4) 6 275 2213 
-                    <br /> Mã số doanh nghiệp: 0101791319 Giấy phép số 2558/GP-TTĐT do Sở TT-TT HN cấp.
-                </p>
-            </div>
-            <div id="footer_copyright">
-            	<p>© Copyright 2015. All rights reserved.</p>
-            </div>
-        </div>    	
-    </div>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/manifest.json"><link rel="shortcut icon" href="/favicon.ico"><title>React App</title><link href="/static/css/main.c17080f1.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/static/js/main.35d639b7.js"></script></body></html>
